--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "digital-book-worm",
   "version": "1.0.0",
   "description": "A place to find and record books of interest.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -14,6 +21,16 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MikeyP957/digital-book-worm/issues"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "express": "^4.16.3",
+    "mongoose": "^5.3.16",
+    "if-env": "^1.0.4"
   },
   "homepage": "https://github.com/MikeyP957/digital-book-worm#readme"
 }
