--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.6.0",
     "express": "^4.16.3",
+    "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
-    "if-env": "^1.0.4"
+    "react-bootstrap": "^1.6.0"
   },
   "homepage": "https://github.com/MikeyP957/digital-book-worm#readme"
 }
