--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^4.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.16.3",
+    "gh-pages": "^3.2.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
     "react-bootstrap": "^1.6.0",
