--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://MikeyP957.github.io/digital-book-worm",
-  "proxy": "http://localhost:3001/",  
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "gh-pages": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
