--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MikeyP957.github.io/digital-book-worm",
+  "homepage": "https://MikeyP957.github.io",
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
